<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/updateTokenDialogFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/token_update_guide"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/token_update_link"
        android:textColorLink="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tokenTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/paste_api_token"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            app:boxBackgroundColor="@color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tokenTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="?android:textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pasteButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_round_content_paste_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_round_done_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />
    </LinearLayout>
</LinearLayout>