<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stroke_primary_top_gradient_8"
    android:clipChildren="false"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toTopOf="@id/bottomFauxPanel"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tickerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="ifContentScrolls"
                android:padding="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/home_tickers_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Bottom KeyStone Height -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/nav_label_update_api_token"
        android:src="@drawable/ic_round_settings_24"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/nav_label_search_ticker"
        android:src="@drawable/ic_round_add_24"
        app:elevation="4dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/fabSetting"
        app:layout_constraintEnd_toStartOf="@id/fabSetting"
        app:layout_constraintTop_toTopOf="@id/fabSetting"
        app:tint="@color/white" />

    <Space
        android:id="@+id/fabSettingMarker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/fabSetting"
        app:layout_constraintTop_toTopOf="@id/fabSetting" />

    <View
        android:id="@+id/bottomFauxPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fabSettingMarker" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/streamConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/home_web_socket_title"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/bottomFauxPanel"
        app:layout_constraintStart_toEndOf="@id/streamConnectionStatusImage"
        app:layout_constraintTop_toTopOf="@id/bottomFauxPanel" />

    <ImageView
        android:id="@+id/streamConnectionStatusImage"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomFauxPanel"
        app:layout_constraintStart_toStartOf="@id/bottomFauxPanel"
        app:layout_constraintTop_toTopOf="@id/bottomFauxPanel"
        tools:src="@drawable/round_white_stroke_8" />

</androidx.constraintlayout.widget.ConstraintLayout>